--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 body {
-  background-color: #00BFFF;  
+  background-color: #3586ff;;  
   color:#17223b;
   text-align: center;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  z-index: 100;
 }
 
 .container {
@@ -14,9 +15,11 @@ body {
 	width: 100%;
 	margin: 0 auto;	
 	padding: 20px;  
+  z-index: 100;
 }
 .row {
   display: flex;
+  z-index: 100;
 }
 
 input {
@@ -28,14 +31,17 @@ font-size: 16px;
   font-weight: 600;	
   text-transform: uppercase;
   text-align: center;
+  z-index: 100;
 }
 input:focus {
   outline: none;
+  z-index: 100;
 }
 .card {
   margin-top: 20px;
     display:flex;    
     justify-content: center;
+    z-index: 100;
 }
 .card-container {
   margin:  20px 5px;
@@ -44,13 +50,15 @@ input:focus {
   width: 470px;
   height: 470px;
   background-color: #f2f4f6;    
-  box-shadow: 0px 0px 25px 1px rgba(50, 50, 50, 0.1);       
+  box-shadow: 0px 0px 25px 1px rgba(50, 50, 50, 0.1); 
+  z-index: 100;      
 }
 .city-name {    
   font-weight:300;
   font-size:40px;
   color: #6b778d;
   bottom: 0;    
+  z-index: 100;
 }
 .icon {
   position: relative;
@@ -58,7 +66,8 @@ input:focus {
   height: 300px;
   bottom: 280px;
   float:right;
-  margin: 5px 5px 0 0;    
+  margin: 5px 5px 0 0;   
+  z-index: 100; 
 }
 .temp {
   position: relative;
@@ -66,6 +75,7 @@ input:focus {
   font-size:80px;
   color:#17223b ;        
   right: 120px;
+  z-index: 100;
 }
 .card-footer {
   background-color: #16459d;     
@@ -78,10 +88,12 @@ input:focus {
   justify-content: center;
   align-items: center;
   width: 100%;
+  z-index: 100;
 }
 .temp-max-min {    
   font-weight:300;
   font-size:50px;
-  color: aliceblue;    
+  color: aliceblue;  
+  z-index: 100;  
   
 }
